@@ -1,3 +1,15 @@
+2010-06-23  Joern Rennecke  <joern.rennecke@embecosm.com>
+
+	PR target/44640
+	* config/spu/spu-protos.h (spu_expand_epilogue) Use bool.
+	* config/spu/spu.c (spu_scalar_mode_supported_p): Declare with bool.
+	(spu_vector_mode_supported_p, spu_handle_fndecl_attribute): Likewise.
+	(spu_handle_vector_attribute, spu_pass_by_reference): Likewise.
+	(spu_rtx_costs, spu_function_ok_for_sibcall): Likewise.
+
+	PR target/44640
+	* config/spu/spu.c (ea_load_store_inline): Use add_reg_note.
+
 2010-06-22  Joern Rennecke  <joern.rennecke@embecosm.com>
 
 	PR bootstrap/44512
